[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/snippets_plugin/snippets_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/snippets_plugin/icon_filesystem.svg" type="Texture" id=2]
[ext_resource path="res://addons/snippets_plugin/icon_reload.svg" type="Texture" id=3]
[ext_resource path="res://addons/snippets_plugin/icon_action_copy.svg" type="Texture" id=4]
[ext_resource path="res://addons/snippets_plugin/icon_script_create.svg" type="Texture" id=5]
[ext_resource path="res://addons/snippets_plugin/icon_remove.svg" type="Texture" id=6]
[ext_resource path="res://addons/snippets_plugin/icon_help.svg" type="Texture" id=7]
[ext_resource path="res://addons/snippets_plugin/snippet_editor.tscn" type="PackedScene" id=8]

[node name="Snippets" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="buttons" type="HBoxContainer" parent="menu" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="btnFolder" type="Button" parent="menu/buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 28.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Select Snippets Folder"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Hint", "Margin" ]

[node name="btnRefresh" type="Button" parent="menu/buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Refresh Snippet List"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="btnClipboard" type="Button" parent="menu/buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Copy  Selected Snippet To Clipboard "
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="btnAddSnippet" type="Button" parent="menu/buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 124.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Copy Clipboard to Snippet"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Hint", "Mouse" ]

[node name="btnDelSnippet" type="Button" parent="menu/buttons" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 156.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Delete Selected Snippet"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Hint", "Mouse" ]

[node name="btnHelp" type="Button" parent="menu/buttons" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_right = 188.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Snippets Plugin Help"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 7 )
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Hint", "Mouse" ]

[node name="Tree" type="Tree" parent="menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
columns = 2
allow_reselect = false
allow_rmb_select = true
hide_folding = false
hide_root = true
drop_mode_flags = 0
select_mode = 0
_sections_unfolded = [ "Hint" ]

[node name="SnipMenu" type="PopupMenu" parent="menu/Tree" index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 154.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
items = [ "Internal Editor", null, false, false, false, -1, 0, null, "", false, "External Editor", null, false, false, false, -1, 0, null, "", false, "Show in File Manager", null, false, false, false, -1, 0, null, "", false ]
hide_on_checkable_item_selection = false
hide_on_state_item_selection = false
_sections_unfolded = [ "Popup" ]

[node name="Statusbar" type="Label" parent="menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FileDialog" type="FileDialog" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 275.0
margin_bottom = 367.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
popup_exclusive = false
window_title = "Open a Directory"
resizable = true
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 2
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "C:/GoDot3/Projects/Snippets"
current_file = ""
current_path = "C:/GoDot3/Projects/Snippets/"
_sections_unfolded = [ "Dialog", "Hint", "Popup", "Size Flags" ]

[node name="msgTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="Help" type="WindowDialog" parent="." index="3"]

visible = false
use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_top = 114.0
margin_right = 844.0
margin_bottom = 463.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Snippets Plugin Help"
resizable = true
_sections_unfolded = [ "Material" ]

[node name="Label" type="RichTextLabel" parent="Help" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 700.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Snippets are small pieces of code you use over and over in your game development lifecycle.
This plugin allows you to copy and paste them to your current game script editor. it also
allows you to add new snippets to list by copying code from script editor and pasting as snippet files.
Snippet files must be saved with .txt extension.

[b]Icons: (Left - Right)[/b]
Select Snippets Folder - Select the folder your snippets are stored in.
Refresh Snippets Folder - Refresh Snippets List if files added externally to folder.
Copy Snippet to Clipboard - Copies selected snippet to clipboard for pasting in script editor.
Add Snippet to List - Copy clipboard to snippet file. File must have \".txt\" extension.
Delete Snippet from List - Delete the selected snippet from list and folder.
Snippet Plugin Help - This file.

[b]Right Mouse Click (Context Menu)[/b]
Internal Editor - Edit the selected snippet with internal editor.
External Editor -  Edit the selected snippet with external editor (editor settings).
Show in File Manager - Open system file manager to snippets folder.

After setting external editor, you must toggle Snippets plugin to inactive, then active.

External Editor is setup in Editor Settings/Text Editor/External
You only need to change the following fields. Leave \"On\" unchecked.
Exec Path: C:/Program Files/Notepad++/notepad++.exe
Exec Flags: {project} --goto {file}:{line}:{col} 

"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Snippets are small pieces of code you use over and over in your game development lifecycle.
This plugin allows you to copy and paste them to your current game script editor. it also
allows you to add new snippets to list by copying code from script editor and pasting as snippet files.
Snippet files must be saved with .txt extension.

Icons: (Left - Right)
Select Snippets Folder - Select the folder your snippets are stored in.
Refresh Snippets Folder - Refresh Snippets List if files added externally to folder.
Copy Snippet to Clipboard - Copies selected snippet to clipboard for pasting in script editor.
Add Snippet to List - Copy clipboard to snippet file. File must have \".txt\" extension.
Delete Snippet from List - Delete the selected snippet from list and folder.
Snippet Plugin Help - This file.

Right Mouse Click (Context Menu)
Internal Editor - Edit the selected snippet with internal editor.
External Editor -  Edit the selected snippet with external editor (editor settings).
Show in File Manager - Open system file manager to snippets folder.

After setting external editor, you must toggle Snippets plugin to inactive, then active.

External Editor is setup in Editor Settings/Text Editor/External
You only need to change the following fields. Leave \"On\" unchecked.
Exec Path: C:/Program Files/Notepad++/notepad++.exe
Exec Flags: {project} --goto {file}:{line}:{col} 

"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Margin", "Rect", "Size Flags", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="snippet_editor" parent="." index="4" instance=ExtResource( 8 )]

visible = false

[connection signal="mouse_entered" from="menu/buttons/btnFolder" to="." method="_on_btnFolder_mouse_entered"]

[connection signal="pressed" from="menu/buttons/btnFolder" to="." method="_on_btnFolder_pressed"]

[connection signal="pressed" from="menu/buttons/btnRefresh" to="." method="_on_btnRefresh_pressed"]

[connection signal="pressed" from="menu/buttons/btnClipboard" to="." method="_on_btnClipboard_pressed"]

[connection signal="pressed" from="menu/buttons/btnAddSnippet" to="." method="_on_btnAddSnippet_pressed"]

[connection signal="pressed" from="menu/buttons/btnDelSnippet" to="." method="_on_btnDelSnippet_pressed"]

[connection signal="pressed" from="menu/buttons/btnHelp" to="." method="_on_btnHelp_pressed"]

[connection signal="item_activated" from="menu/Tree" to="." method="_on_Tree_item_activated"]

[connection signal="item_rmb_selected" from="menu/Tree" to="." method="_on_Tree_item_rmb_selected"]

[connection signal="item_selected" from="menu/Tree" to="." method="_on_Tree_item_selected"]

[connection signal="id_pressed" from="menu/Tree/SnipMenu" to="." method="_on_SnipMenu_id_pressed"]

[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]

[connection signal="timeout" from="msgTimer" to="." method="_on_msgTimer_timeout"]


